--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <!-- Фильтр работ -->
         <div class="container">
           <!-- Скрытый заголовок -->
-          <!-- <h1>Портфолио</h1> -->
+          <h1 class="visually-hidden">Портфолио</h1>
           <ul class="sorting-buttons list">
             <li class="btn-item">
               <button type="button">Все</button>
