--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
       <section class="section feature-section">
         <div class="container">
           <!--Скрытый заголовок-->
-          <!-- <h2 class="section-title">Преимущества</h2> -->
+          <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="feature-list list">
-            <li class="feature-item">
+            <li class="feature-item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li class="feature-item">
+            <li class="feature-item icon-clock">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li class="feature-item">
+            <li class="feature-item icon-diagram">
               <h3 class="title">Планирование</h3>
               <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li class="feature-item">
+            <li class="feature-item icon-astronaut">
               <h3 class="title">Современные технологии</h3>
               <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
