Added clients-mark and original icons

--- a/index.html
+++ b/index.html
@@ -126,6 +126,33 @@
           </ul>
         </div>
       </section>
+
+      <!-- Секция Клиенты -->
+      <section class="section client-section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="client list list">
+            <li class="client-item">
+              <a class="client-link link" href="#"></a>
+            </li>
+            <li class="client-item">
+              <a class="client-link link" href="#"></a>
+            </li>
+            <li class="client-item">
+              <a class="client-link link" href="#"></a>
+            </li>
+            <li class="client-item">
+              <a class="client-link link" href="#"></a>
+            </li>
+            <li class="client-item">
+              <a class="client-link link" href="#"></a>
+            </li>
+            <li class="client-item">
+              <a class="client-link link" href="#"></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer>
