Added bcg-image to hero-section

--- a/index.html
+++ b/index.html
@@ -53,18 +53,38 @@
           <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="feature-list list">
             <li class="feature-item icon-antenna">
+              <div class="feature-icon">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="feature-item icon-clock">
+              <div class="feature-icon">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#clock-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="feature-item icon-diagram">
+              <div class="feature-icon">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="feature-item icon-astronaut">
+              <div class="feature-icon">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -100,6 +120,36 @@
               <div class="team-info">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="work-position">Product Designer</p>
+                <ul class="socials list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -107,6 +157,36 @@
               <div class="team-info">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="work-position">Frontend Developer</p>
+                <ul class="socials list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -114,6 +194,36 @@
               <div class="team-info">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="work-position">Marketing</p>
+                <ul class="socials list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -121,6 +231,36 @@
               <div class="team-info">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="work-position">UI Designer</p>
+                <ul class="socials list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg>
+                        <use href=""></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -131,7 +271,7 @@
       <section class="section client-section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="client list list">
+          <ul class="client-list list">
             <li class="client-item">
               <a class="client-link link" href="#"></a>
             </li>
