Added icons to the header-contacts

--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
         <!--Контакты в шапке-->
         <ul class="header-contacts list">
           <li class="item">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="32" height="16">
+                <use href="./images/icons/symbol-defs.svg#envelope"></use>
+              </svg>
+              <p>info@devstudio.com</p></a
+            >
           </li>
           <li class="item">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons/symbol-defs.svg#smartphone"></use>
+              </svg>
+              <p>+38 096 111 11 11</p></a
+            >
           </li>
         </ul>
       </div>
@@ -121,28 +131,28 @@
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="work-position">Product Designer</p>
                 <ul class="socials list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
@@ -158,28 +168,28 @@
                 <h3 class="name">Ольга Репина</h3>
                 <p class="work-position">Frontend Developer</p>
                 <ul class="socials list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
@@ -195,28 +205,28 @@
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="work-position">Marketing</p>
                 <ul class="socials list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
@@ -232,28 +242,28 @@
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="work-position">UI Designer</p>
                 <ul class="socials list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
                         <use href=""></use>
