--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -178,21 +178,21 @@
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -215,21 +215,21 @@
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -252,21 +252,21 @@
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
                       <svg>
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -283,22 +283,46 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="client-list list">
             <li class="client-item">
-              <a class="client-link link" href="#"></a>
+              <a class="client-link link" href="#">
+                <svg width="44" height="49">
+                  <use href="./images/icons/symbol-defs.svg#logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a class="client-link link" href="#"></a>
+              <a class="client-link link" href="#">
+                <svg width="40" height="52">
+                  <use href="./images/icons/symbol-defs.svg#logo-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a class="client-link link" href="#"></a>
+              <a class="client-link link" href="#">
+                <svg width="41" height="43">
+                  <use href="./images/icons/symbol-defs.svg#logo-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a class="client-link link" href="#"></a>
+              <a class="client-link link" href="#">
+                <svg width="80" height="42">
+                  <use href="./images/icons/symbol-defs.svg#logo-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a class="client-link link" href="#"></a>
+              <a class="client-link link" href="#">
+                <svg width="59" height="47">
+                  <use href="./images/icons/symbol-defs.svg#logo-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a class="client-link link" href="#"></a>
+              <a class="client-link link" href="#">
+                <svg width="88" height="45">
+                  <use href="./images/icons/symbol-defs.svg#logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
