--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="feature-list list">
             <li class="feature-item icon-antenna">
-              <div class="feature-icon">
-                <svg>
+              <div class="feature-icon-block">
+                <svg class="feature-icon">
                   <use href="./images/icons/symbol-defs.svg#antenna-1"></use>
                 </svg>
               </div>
@@ -72,8 +72,8 @@
               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="feature-item icon-clock">
-              <div class="feature-icon">
-                <svg>
+              <div class="feature-icon-block">
+                <svg class="feature-icon">
                   <use href="./images/icons/symbol-defs.svg#clock-1"></use>
                 </svg>
               </div>
@@ -81,8 +81,8 @@
               <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="feature-item icon-diagram">
-              <div class="feature-icon">
-                <svg>
+              <div class="feature-icon-block">
+                <svg class="feature-icon">
                   <use href="./images/icons/symbol-defs.svg#diagram-1"></use>
                 </svg>
               </div>
@@ -90,8 +90,8 @@
               <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="feature-item icon-astronaut">
-              <div class="feature-icon">
-                <svg>
+              <div class="feature-icon-block">
+                <svg class="feature-icon">
                   <use href="./images/icons/symbol-defs.svg#astronaut-1"></use>
                 </svg>
               </div>
