--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,20 @@
         <!--Контакты в шапке-->
         <ul class="header-contacts list">
           <li class="item">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="32" height="16">
+                <use href="./images/icons/symbol-defs.svg#envelope"></use>
+              </svg>
+              <p>info@devstudio.com</p></a
+            >
           </li>
           <li class="item">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons/symbol-defs.svg#smartphone"></use>
+              </svg>
+              <p>+38 096 111 11 11</p></a
+            >
           </li>
         </ul>
       </div>
