--- a/index.html
+++ b/index.html
@@ -340,6 +340,39 @@
           </ul>
         </address>
       </div>
+      <div class="footer-socials">
+        <em class="get-us">ПРИСОЕДИНЯЙТЕСЬ</em>
+        <ul class="socials list">
+          <li class="social-item footer">
+            <a class="social-link footer" href="#">
+              <svg>
+                <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item footer">
+            <a class="social-link footer" href="#">
+              <svg>
+                <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item footer">
+            <a class="social-link footer" href="#">
+              <svg>
+                <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item footer">
+            <a class="social-link footer" href="#">
+              <svg>
+                <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
