--- a/index.html
+++ b/index.html
@@ -170,28 +170,28 @@
                 <ul class="socials list">
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
@@ -207,28 +207,28 @@
                 <ul class="socials list">
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
@@ -244,28 +244,28 @@
                 <ul class="socials list">
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="#">
-                      <svg>
+                      <svg class="social-icon">
                         <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                       </svg>
                     </a>
@@ -284,42 +284,42 @@
           <ul class="client-list list">
             <li class="client-item">
               <a class="client-link link" href="#">
-                <svg width="44" height="49">
+                <svg class="client-icon" width="44" height="49">
                   <use href="./images/icons/symbol-defs.svg#logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link link" href="#">
-                <svg width="40" height="52">
+                <svg class="client-icon" width="40" height="52">
                   <use href="./images/icons/symbol-defs.svg#logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link link" href="#">
-                <svg width="41" height="43">
+                <svg class="client-icon" width="41" height="43">
                   <use href="./images/icons/symbol-defs.svg#logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link link" href="#">
-                <svg width="80" height="42">
+                <svg class="client-icon" width="80" height="42">
                   <use href="./images/icons/symbol-defs.svg#logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link link" href="#">
-                <svg width="59" height="47">
+                <svg class="client-icon" width="59" height="47">
                   <use href="./images/icons/symbol-defs.svg#logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link link" href="#">
-                <svg width="88" height="45">
+                <svg class="client-icon" width="88" height="45">
                   <use href="./images/icons/symbol-defs.svg#logo-6"></use>
                 </svg>
               </a>
@@ -331,47 +331,49 @@
 
     <footer>
       <div class="container footer-container">
-        <a class="logo" href="./index.html"><span>Web</span><span class="footer-logo">Studio</span></a>
-        <address>
-          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="footer-contacts list">
-            <li class="footer-item"><a href="mailto:info@example.com">info@example.com</a></li>
-            <li class="footer-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <div class="footer-adress">
+          <a class="logo" href="./index.html"><span>Web</span><span class="footer-logo">Studio</span></a>
+          <address>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-contacts list">
+              <li class="footer-item"><a href="mailto:info@example.com">info@example.com</a></li>
+              <li class="footer-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <b class="get-us">ПРИСОЕДИНЯЙТЕСЬ</b>
+          <ul class="socials list">
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg>
+                  <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
-      </div>
-      <div class="footer-socials">
-        <em class="get-us">ПРИСОЕДИНЯЙТЕСЬ</em>
-        <ul class="socials list">
-          <li class="social-item footer">
-            <a class="social-link footer" href="#">
-              <svg>
-                <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item footer">
-            <a class="social-link footer" href="#">
-              <svg>
-                <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item footer">
-            <a class="social-link footer" href="#">
-              <svg>
-                <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item footer">
-            <a class="social-link footer" href="#">
-              <svg>
-                <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
