Added hover/focus to footer-socials

--- a/index.html
+++ b/index.html
@@ -346,28 +346,28 @@
           <ul class="socials list">
             <li class="social-item footer">
               <a class="social-link footer" href="#">
-                <svg>
+                <svg class="social-icon">
                   <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item footer">
               <a class="social-link footer" href="#">
-                <svg>
+                <svg class="social-icon">
                   <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item footer">
               <a class="social-link footer" href="#">
-                <svg>
+                <svg class="social-icon">
                   <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item footer">
               <a class="social-link footer" href="#">
-                <svg>
+                <svg class="social-icon">
                   <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
                 </svg>
               </a>
