--- a/portfolio.html
+++ b/portfolio.html
@@ -164,14 +164,49 @@
 
     <footer>
       <div class="container footer-container">
-        <a class="logo" href="./index.html"><span>Web</span><span class="footer-logo">Studio</span></a>
-        <address>
-          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="footer-contacts list">
-            <li class="footer-item"><a href="mailto:info@example.com">info@example.com</a></li>
-            <li class="footer-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <div class="footer-adress">
+          <a class="logo" href="./index.html"><span>Web</span><span class="footer-logo">Studio</span></a>
+          <address>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-contacts list">
+              <li class="footer-item"><a href="mailto:info@example.com">info@example.com</a></li>
+              <li class="footer-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <b class="get-us">присоединяйтесь</b>
+          <ul class="socials list">
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons/symbol-defs.svg#instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons/symbol-defs.svg#twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons/symbol-defs.svg#facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item footer">
+              <a class="social-link footer" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons/symbol-defs.svg#linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
