--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="header-contacts list">
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="32" height="16">
+              <svg class="contact-icon" width="16" height="12">
                 <use href="./images/icons/symbol-defs.svg#envelope"></use>
               </svg>
               <p>info@devstudio.com</p></a
@@ -342,7 +342,7 @@
           </address>
         </div>
         <div class="footer-socials">
-          <b class="get-us">ПРИСОЕДИНЯЙТЕСЬ</b>
+          <b class="get-us">присоединяйтесь</b>
           <ul class="socials list">
             <li class="social-item footer">
               <a class="social-link footer" href="#">
